[project]
name = "markdownpro"
version = "0.1.0"
description = "A clean, distraction-free Markdown editor with live preview"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6",
    "PyQt6-WebEngine>=6.6",
    "markdown>=3.5",
    "pymdown-extensions>=10.0",
    "Pygments>=2.17",
]

[project.scripts]
markdownpro = "markdownpro.main:main"

[project.optional-dependencies]
dev = [
    "pyrefly",
]

[tool.pyrefly]
python-interpreter-path = ".venv/bin/python"
